--- a/packages/app/src/components/DimensionsPanel/styles/DndDimensionsPanel.module.css
+++ b/packages/app/src/components/DimensionsPanel/styles/DndDimensionsPanel.module.css
@@ -3,6 +3,6 @@
     display: flex;
     flex-direction: column;
     background-color: #f4f6f8;
-    padding: 8px 8px 0 8px;
+    padding: 8px 0 0 8px;
     overflow: hidden;
 }
